Bugfix for panel buttons and sidebar visibility

--- a/public/components/nmsprime.css
+++ b/public/components/nmsprime.css
@@ -401,8 +401,7 @@ table .index_check {
   from{ opacity:0 }
   to{ opacity:1 }
 }
-
-.flex-column
+.panel-body
 {
-overflow-y: auto !important;
+overflow-y: auto;
 }
